[package]
name = "cell_split"
version = "0.1.0-devel"
edition = "2018"
license = "ISC OR Apache-2.0"

[features]
nightly = ["blake2/simd"]

[dependencies]
blake2 = { path = "../blake2" }
byteorder = { path = "../byteorder" }
rustc_serialize = { path = "../rustc_serialize" }
smol_str = { path = "../smol_str", default-features = false }
